--- a/data/src/main/resources/ogm.properties
+++ b/data/src/main/resources/ogm.properties
@@ -1,9 +1,9 @@
 compiler=org.neo4j.ogm.compiler.MultiStatementCypherCompiler
 #server
-#driver=org.neo4j.ogm.drivers.http.driver.HttpDriver
-#URI=http://192.168.1.214:88
-driver=org.neo4j.ogm.drivers.bolt.driver.BoltDriver
-URI=bolt://192.168.1.214
+driver=org.neo4j.ogm.drivers.http.driver.HttpDriver
+URI=http://192.168.1.211
+#driver=org.neo4j.ogm.drivers.bolt.driver.BoltDriver
+#URI=bolt://192.168.1.214
 username = neo4j
 password = 12345678
 ##embed
