--- a/data/src/main/resources/ogm.properties
+++ b/data/src/main/resources/ogm.properties
@@ -1,11 +1,15 @@
 compiler=org.neo4j.ogm.compiler.MultiStatementCypherCompiler
-#server
+#ha server
 driver=org.neo4j.ogm.drivers.http.driver.HttpDriver
 URI=http://192.168.1.211
-#driver=org.neo4j.ogm.drivers.bolt.driver.BoltDriver
-#URI=bolt://192.168.1.214
+
 username = neo4j
 password = 12345678
+
+#Bolt
+#driver=org.neo4j.ogm.drivers.bolt.driver.BoltDriver
+#URI=bolt://192.168.1.214
+
 ##embed
 #driver=org.neo4j.ogm.drivers.embedded.driver.EmbeddedDriver
 #URI=file:///test/graph.db
