update Spring Boot to 1.4.2

--- a/data/src/main/resources/ogm.properties
+++ b/data/src/main/resources/ogm.properties
@@ -1,16 +1,16 @@
 compiler=org.neo4j.ogm.compiler.MultiStatementCypherCompiler
-#ha server
+#Http
 driver=org.neo4j.ogm.drivers.http.driver.HttpDriver
-URI=http://192.168.1.211
+URI=http://localhost:7474
 
 username = neo4j
 password = 12345678
 
-#Bolt
+##Bolt
 #driver=org.neo4j.ogm.drivers.bolt.driver.BoltDriver
-#URI=bolt://192.168.1.214
+#URI=bolt://localhost
 
-##embed
+##Embed
 #driver=org.neo4j.ogm.drivers.embedded.driver.EmbeddedDriver
 #URI=file:///test/graph.db
 
